# rusty-pipe

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  convert.py  pt2ot.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: az_deploy.yml  clippy.yml  dockerfile_build.yml  dockerfile_lint.yml
deploy/: Cargo.toml  Dockerfile  Makefile
deploy/src/: logic.rs  main.rs  routes.rs
src/: cnn.rs  main.rs  vgg.rs
train/: Cargo.toml  Makefile  convert.py  requirements.txt
train/src/: cnn.rs  main.rs  utils.rs  vgg.rs
