[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.11.0"
actix-web = "4.0.0-beta.11"
actix-multipart = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"
env_logger = "0.10.0"
log = "0.4.14"
futures = "0.3.28"
